ISSUE #1084 - Fix scrollbars

--- a/frontend/components/permissions-list/css/permissions-list.css
+++ b/frontend/components/permissions-list/css/permissions-list.css
@@ -20,8 +20,6 @@
 
 .permissionsListBody {
   border-top: 1px solid rgba(0, 0, 0, 0.06);
-  overflow-x: hidden;
-  overflow-y: auto;
   height: 100%;
   max-height: calc(100% - 72px);
 }
@@ -131,8 +129,4 @@
 
 .permissionsListHeader md-radio-button {
   margin-top: 12px !important;
-}
-
-.permissionsListBody .simplebar-track.vertical {
-  display: none;
 }
